--- a/css/instructions.css
+++ b/css/instructions.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   padding-bottom: 5rem;
   position: relative;
 }
