--- a/css/highscore.css
+++ b/css/highscore.css
@@ -1,5 +1,12 @@
 .highscore {
-  text-align: center;
   font-size: 2.75rem;
-  margin: 4rem;
+  margin: 4rem 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.highscore__icon {
+  width: 2.5rem;
+  margin: 0 1rem;
 }
