change highscore margin and padding

--- a/css/highscore.css
+++ b/css/highscore.css
@@ -1,6 +1,6 @@
 .highscore {
   font-size: 2.75rem;
-  margin: 4rem 1;
+  margin: 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
