--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -10,7 +10,7 @@ table {
   align-items: center;
   justify-content: space-evenly;
   padding: 2% 2%;
-  margin: 2rem 0 2rem;
+  margin: ;
 }
 
 @media (min-width: 300px) {
