--- a/css/highscore.css
+++ b/css/highscore.css
@@ -6,7 +6,26 @@
   justify-content: center;
 }
 
-.highscore__icon {
-  width: 2.5rem;
-  margin: 0 1rem;
+@media (min-width: 300px) {
+  .highscore {
+    font-size: 0.7rem;
+    text-align: center;
+    line-height: 1rem;
+  }
+}
+
+@media (min-width: 600px) {
+  .highscore {
+    font-size: 1.4rem;
+    text-align: center;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .highscore {
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 4rem;
+  }
 }
