--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -9,8 +9,7 @@ table {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 2% 2%;
-  margin: ;
+  padding-bottom: 2%;
 }
 
 @media (min-width: 300px) {
